Flatten Packages, Upgrade to Java 20